...
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_player_x"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="X"
            android:textSize="50sp"
            android:textColor="#EB5757"
            android:alpha="1.00"/>
        <Button
            android:id="@+id/btn_player_o"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="O"
            android:textSize="50sp"
            android:textColor="#2D9CDB"
            android:alpha="1.00"
...
